[metadata]
name = nimo
summary = Nova Instance Monitoring
description-file =
    README.md
author = Jay Mehta
author-email = jaymehta@paypal.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    nimo

[entry_points]
console_scripts =
	nimo = nimo.monitor:main